Bug 152531 - Basic IDE: Background of the dialog editor does not respect dark mode
Summary: Basic IDE: Background of the dialog editor does not respect dark mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.6.0 target:7.5.0.2
Keywords:
Depends on:
Blocks: BASIC-IDE Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-12-15 21:45 UTC by Rafael Lima
Modified: 2023-01-09 15:58 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-12-15 21:45:22 UTC
If you choose "LibreOffice Dark" in the Application Colors dialog and you're using a dark theme in your OS, the background of the Dialog Editor of the Basic IDE is still white.

Steps to reproduce:
1) Go to Tools - Options - Application Colors and choose "LibreOffice Dark".
2) Now open the Basic IDE and choose a dialog to edit (by default there is a "Dialog 1" dialog in the Standard module)
3) Notice that the background color is white

IMO the correct color would be "Application Background" (svtools::APPBACKGROUND).

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 01c9c971e43782800ebf63acc763a7e7fba096c1
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2022-12-18 21:25:12 UTC
Confirm in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 68809ffde7d50a5f47afa5a1235025513762df8c
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: CL threaded
Comment 2 Rafael Lima 2022-12-20 13:40:02 UTC
Patch available for review at

https://gerrit.libreoffice.org/c/core/+/144603
Comment 3 Andreas Heinisch 2023-01-09 10:28:06 UTC
Should this be closed since there is a merged patch?
Comment 4 Commit Notification 2023-01-09 11:54:16 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c6aa7f2918819af670c6d6ed25645c725c91667

tdf#152531 Fix background color of Dialog Editor in dark mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-09 15:58:47 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/555dfdd35f662489df481485e5cd866f67e27a70

tdf#152531 Fix background color of Dialog Editor in dark mode

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.