tdf#152531 Fix background color of Dialog Editor in dark mode

Change-Id: I7006ff472dae5ce8d4b52c108f742c3c6d9b0b61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144603
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>